--- a/client/src/components/Room/Room.css
+++ b/client/src/components/Room/Room.css
@@ -1,34 +1,41 @@
 .Room {
+    height: calc(100vh - var(--nav-height));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    margin-top: 20%;
 }
 
 .Room .text {
+    width: 55%;
+    margin: 0 auto;
     display: flex;
-    flex-wrap: wrap;
-    gap: .5rem;
     justify-content: center;
+    flex-wrap: wrap;
+    gap: var(--word-gap);
 }
 
 .Room .text h3 {
-    font-weight: 400;
+    font-size: 1.4rem;
+    font-weight: 300;
 }
 
-.Room input {
-    width: 30%;
-    height: 2.7rem;
-    margin: 2rem;
-    padding: 0 .5rem;
+.Room #input {
+    position: absolute;
 
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 300;
-    color: var(--txt-main);
-    background-color: #46454725;
+
+    color: transparent;
+    caret-color: var(--txt-main);
+    background: none;
+    /* background-color: #46454725; */
     
     border: none;
     border-radius: .2rem;
     outline: none;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.212);
+    /* box-shadow: 0 0 4px rgba(0, 0, 0, 0.212); */
 }
 
 .Room .text .incorrect {
@@ -36,7 +43,7 @@
 }
 
 .Room .text .correct {
-    color: rgb(9, 231, 113);
+    color: var(--correct);
 }
 
 .replay {
